Fixed overflow

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -28,6 +28,7 @@ body {
 	height:50px;
 	border-top:1px solid rgba(0, 0, 0, 0.1);
 	display:flex;
+	overflow:hidden;
 }
 
 
